Fixed map delete button being invisible on some images

--- a/src/css_modules/imagelist.module.css
+++ b/src/css_modules/imagelist.module.css
@@ -23,10 +23,13 @@
 
             width:25px;
             height:25px;
+
+            background-color: rgba(75, 75, 75, 0.5);
         }
 
         .delete:hover{
             border: 2px solid white;
+            background-color: black;
         }
     }
     .image_item:hover{
